# erp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  cargo  docker-compose.yml  nginx.conf
docs/: API.md  DEPLOYMENT.md  bmm-workflow-status.yaml
erp-abc/: Cargo.toml
erp-ai/: Cargo.toml
erp-api/: Cargo.toml
erp-api/src/: config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs
erp-api/src/handlers/: ai.rs  approval_workflow.rs  aps.rs  archival.rs  assets.rs  assistant.rs  attachment.rs  audit.rs  auth.rs  automation.rs  backup.rs  bank.rs  barcode.rs  bi.rs  bpm.rs  bulk_operations.rs  bundles.rs  calendar.rs  chat.rs  clm.rs  commission.rs  company.rs  compensation.rs  compliance.rs  config.rs  cpq.rs  credit.rs  credit_notes.rs  demand.rs  documents.rs  eam.rs  ecommerce.rs  edi.rs  email.rs  email_templates.rs  extended.rs  favorites.rs  features.rs  finance.rs  fraud.rs  (+71 more)
erp-api/src/middleware/: mod.rs  rate_limit.rs
erp-api/tests/: integration_test.rs
erp-approval-workflow/: Cargo.toml
erp-aps/: Cargo.toml
erp-assets/: Cargo.toml
erp-assets-depreciation/: Cargo.toml
erp-assets-revaluation/: Cargo.toml
erp-assets/src/: models.rs  repository.rs  service.rs
erp-assets/tests/: depreciation_test.rs
erp-assistant/: Cargo.toml
erp-ats/: Cargo.toml
erp-audit/: Cargo.toml
erp-auth/: Cargo.toml
erp-auth/src/: jwt.rs  lib.rs  models.rs  rbac.rs  repository.rs  service.rs
erp-automation/: Cargo.toml
erp-backup/: Cargo.toml
erp-bank/: Cargo.toml
erp-barcode/: Cargo.toml
erp-bcp/: Cargo.toml
erp-bi/: Cargo.toml
erp-board/: Cargo.toml
erp-bpm/: Cargo.toml
erp-budgeting/: Cargo.toml
erp-bundles/: Cargo.toml
erp-calendar/: Cargo.toml
erp-capa/: Cargo.toml
erp-chat/: Cargo.toml
erp-clm/: Cargo.toml
erp-coi/: Cargo.toml
erp-commission/: Cargo.toml
erp-company/: Cargo.toml
erp-compensation/: Cargo.toml
erp-config/: Cargo.toml
erp-consignment/: Cargo.toml
erp-core/: Cargo.toml
erp-cpq/: Cargo.toml
erp-credit/: Cargo.toml
erp-credit-notes/: Cargo.toml
erp-credit-scoring/: Cargo.toml
erp-crm/: Cargo.toml
erp-crm-clv/: Cargo.toml
erp-csr/: Cargo.toml
erp-dataquality/: Cargo.toml
erp-demand/: Cargo.toml
erp-documents/: Cargo.toml
erp-dropship/: Cargo.toml
erp-dunning/: Cargo.toml
erp-dunning-strategy/: Cargo.toml
erp-eam/: Cargo.toml
erp-ecommerce/: Cargo.toml
erp-edi/: Cargo.toml
erp-ehs/: Cargo.toml
erp-email/: Cargo.toml
erp-enterprise/: Cargo.toml
erp-expenses/: Cargo.toml
erp-expenses-validation/: Cargo.toml
erp-favorites/: Cargo.toml
erp-features/: Cargo.toml
erp-finance/: Cargo.toml
erp-finance-dynamic-discounting/: Cargo.toml
erp-fleet/: Cargo.toml
erp-fraud/: Cargo.toml
erp-fraud/src/: models.rs  repository.rs  service.rs
erp-fsm/: Cargo.toml
erp-giftcards/: Cargo.toml
erp-grant/: Cargo.toml
erp-graphql/: Cargo.toml
erp-grc/: Cargo.toml
erp-health/: Cargo.toml
erp-helpdesk/: Cargo.toml
erp-hr/: Cargo.toml
erp-i18n/: Cargo.toml
erp-innovation/: Cargo.toml
erp-insurance/: Cargo.toml
erp-integration/: Cargo.toml
erp-integration/src/: models.rs  repository.rs  service.rs
erp-intercompany/: Cargo.toml
erp-intercompany-reconciliation/: Cargo.toml
erp-intercompany/src/: models.rs  repository.rs  service.rs
erp-inventory/: Cargo.toml
erp-inventory-adjustment/: Cargo.toml
erp-inventory-aging/: Cargo.toml
erp-inventory-optimization/: Cargo.toml
erp-iot/: Cargo.toml
erp-ir/: Cargo.toml
erp-jobs/: Cargo.toml
erp-jobs/src/: models.rs  repository.rs  service.rs
erp-kanban/: Cargo.toml
erp-keys/: Cargo.toml
erp-keys/src/: models.rs  repository.rs  service.rs
erp-knowledge/: Cargo.toml
erp-knowledge/src/: models.rs  repository.rs  service.rs
erp-landed-cost/: Cargo.toml
erp-learning/: Cargo.toml
erp-lease/: Cargo.toml
erp-lease-accounting/: Cargo.toml
erp-leave/: Cargo.toml
erp-legal/: Cargo.toml
erp-lms/: Cargo.toml
erp-loyalty/: Cargo.toml
erp-manufacturing/: Cargo.toml
erp-manufacturing-backflush/: Cargo.toml
erp-manufacturing-backflush/src/: lib.rs
erp-manufacturing-bom-diff/: Cargo.toml
erp-manufacturing-oee/: Cargo.toml
erp-manufacturing-variance/: Cargo.toml
erp-mdm/: Cargo.toml
erp-mentorship/: Cargo.toml
erp-mobility/: Cargo.toml
erp-monitoring/: Cargo.toml
erp-mrp/: Cargo.toml
erp-mrp-rccp/: Cargo.toml
erp-notes/: Cargo.toml
erp-notes/src/: lib.rs  models.rs  repository.rs  service.rs
erp-notifications/: Cargo.toml
erp-ocr/: Cargo.toml
erp-okr/: Cargo.toml
erp-partner/: Cargo.toml
erp-payment-terms/: Cargo.toml
erp-payments/: Cargo.toml
erp-payments/src/: lib.rs  models.rs  repository.rs  service.rs  stripe.rs
erp-payments/tests/: refund_test.rs
erp-payroll/: Cargo.toml
erp-pcard/: Cargo.toml
erp-performance/: Cargo.toml
erp-pim/: Cargo.toml
erp-planning/: Cargo.toml
erp-plm/: Cargo.toml
erp-portals/: Cargo.toml
erp-portals/src/: models.rs  repository.rs  service.rs
erp-pos/: Cargo.toml
erp-predictive/: Cargo.toml
erp-pricing/: Cargo.toml
erp-processmining/: Cargo.toml
erp-product-variants/: Cargo.toml
erp-projects/: Cargo.toml
erp-projects-evm/: Cargo.toml
erp-promotions/: Cargo.toml
erp-purchasing/: Cargo.toml
erp-purchasing-scorecard/: Cargo.toml
erp-push/: Cargo.toml
erp-quality/: Cargo.toml
erp-quality-sampling/: Cargo.toml
erp-quality-spc/: Cargo.toml
erp-real-estate/: Cargo.toml
erp-rebates/: Cargo.toml
erp-rebates-accrual/: Cargo.toml
erp-recognition/: Cargo.toml
erp-security/: Cargo.toml
erp-security/src/: lib.rs  models.rs  oauth.rs  repository.rs  service.rs  totp.rs
erp-signing/: Cargo.toml
erp-signing/src/: models.rs  repository.rs  service.rs
erp-stock-transfer/: Cargo.toml
erp-stock-transfer/src/: lib.rs  models.rs  repository.rs  service.rs
erp-territory/: Cargo.toml
erp-territory/src/: models.rs  repository.rs  service.rs
erp-webhooks/: Cargo.toml
erp-webhooks/src/: models.rs  repository.rs  service.rs
(+575 files in other folders)
