[workspace]
members = [
    "erp-core",
    "erp-finance",
    "erp-inventory",
    "erp-sales",
    "erp-purchasing",
    "erp-manufacturing",
    "erp-hr",
    "erp-auth",
    "erp-projects",
    "erp-service",
    "erp-assets",
    "erp-returns",
    "erp-pos",
    "erp-ecommerce",
    "erp-tax",
    "erp-reports",
    "erp-barcode",
    "erp-ai",
    "erp-portals",
    "erp-iot",
    "erp-automation",
    "erp-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ERP Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
once_cell = "1.19"
sha2 = "0.10"

erp-core = { path = "erp-core" }
erp-finance = { path = "erp-finance" }
erp-inventory = { path = "erp-inventory" }
erp-sales = { path = "erp-sales" }
erp-purchasing = { path = "erp-purchasing" }
erp-manufacturing = { path = "erp-manufacturing" }
erp-hr = { path = "erp-hr" }
erp-auth = { path = "erp-auth" }
erp-projects = { path = "erp-projects" }
erp-service = { path = "erp-service" }
erp-assets = { path = "erp-assets" }
erp-returns = { path = "erp-returns" }
erp-pos = { path = "erp-pos" }
erp-ecommerce = { path = "erp-ecommerce" }
erp-tax = { path = "erp-tax" }
erp-reports = { path = "erp-reports" }
erp-barcode = { path = "erp-barcode" }
erp-ai = { path = "erp-ai" }
erp-portals = { path = "erp-portals" }
erp-iot = { path = "erp-iot" }
erp-automation = { path = "erp-automation" }
