[workspace]
members = [
    "erp-core",
    "erp-finance",
    "erp-inventory",
    "erp-sales",
    "erp-purchasing",
    "erp-manufacturing",
    "erp-hr",
    "erp-auth",
    "erp-projects",
    "erp-service",
    "erp-assets",
    "erp-returns",
    "erp-pos",
    "erp-ecommerce",
    "erp-tax",
    "erp-reports",
    "erp-barcode",
    "erp-ai",
    "erp-portals",
    "erp-iot",
    "erp-automation",
    "erp-quality",
    "erp-treasury",
    "erp-sustainability",
    "erp-planning",
    "erp-expenses",
    "erp-learning",
    "erp-grc",
    "erp-notifications",
    "erp-webhooks",
    "erp-jobs",
    "erp-integration",
    "erp-templates",
    "erp-documents",
    "erp-pricing",
    "erp-sourcing",
    "erp-config",
    "erp-rules",
    "erp-company",
    "erp-subscription",
    "erp-shipping",
    "erp-payments",
    "erp-risk",
    "erp-security",
    "erp-enterprise",
    "erp-features",
    "erp-keys",
    "erp-backup",
    "erp-monitoring",
    "erp-cpq",
    "erp-clm",
    "erp-commission",
    "erp-aps",
    "erp-spend-analytics",
    "erp-compensation",
    "erp-tms",
    "erp-plm",
    "erp-mdm",
    "erp-fsm",
    "erp-tpm",
    "erp-wms",
    "erp-demand",
    "erp-edi",
    "erp-tenant",
    "erp-revrec",
    "erp-intercompany",
    "erp-lms",
    "erp-reportscheduling",
    "erp-chat",
    "erp-calendar",
    "erp-signing",
    "erp-email",
    "erp-lease",
    "erp-bank",
    "erp-loyalty",
    "erp-partner",
    "erp-pcard",
    "erp-territory",
    "erp-predictive",
    "erp-mrp",
    "erp-eam",
    "erp-budgeting",
    "erp-grant",
    "erp-abc",
    "erp-knowledge",
    "erp-helpdesk",
    "erp-dataquality",
    "erp-bi",
    "erp-i18n",
    "erp-push",
    "erp-bpm",
    "erp-graphql",
    "erp-api",
    "erp-assistant",
    "erp-ocr",
    "erp-fraud",
    "erp-processmining",
    "erp-promotions",
    "erp-approval-workflow",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["ERP Team"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
axum = { version = "0.7", features = ["multipart"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
once_cell = "1.19"
sha2 = "0.10"

erp-core = { path = "erp-core" }
erp-finance = { path = "erp-finance" }
erp-inventory = { path = "erp-inventory" }
erp-sales = { path = "erp-sales" }
erp-purchasing = { path = "erp-purchasing" }
erp-manufacturing = { path = "erp-manufacturing" }
erp-hr = { path = "erp-hr" }
erp-auth = { path = "erp-auth" }
erp-projects = { path = "erp-projects" }
erp-service = { path = "erp-service" }
erp-assets = { path = "erp-assets" }
erp-returns = { path = "erp-returns" }
erp-pos = { path = "erp-pos" }
erp-ecommerce = { path = "erp-ecommerce" }
erp-tax = { path = "erp-tax" }
erp-reports = { path = "erp-reports" }
erp-barcode = { path = "erp-barcode" }
erp-ai = { path = "erp-ai" }
erp-portals = { path = "erp-portals" }
erp-iot = { path = "erp-iot" }
erp-automation = { path = "erp-automation" }
erp-quality = { path = "erp-quality" }
erp-treasury = { path = "erp-treasury" }
erp-sustainability = { path = "erp-sustainability" }
erp-planning = { path = "erp-planning" }
erp-expenses = { path = "erp-expenses" }
erp-learning = { path = "erp-learning" }
erp-grc = { path = "erp-grc" }
erp-notifications = { path = "erp-notifications" }
erp-webhooks = { path = "erp-webhooks" }
erp-jobs = { path = "erp-jobs" }
erp-integration = { path = "erp-integration" }
erp-templates = { path = "erp-templates" }
erp-documents = { path = "erp-documents" }
erp-pricing = { path = "erp-pricing" }
erp-sourcing = { path = "erp-sourcing" }
erp-config = { path = "erp-config" }
erp-rules = { path = "erp-rules" }
erp-company = { path = "erp-company" }
erp-subscription = { path = "erp-subscription" }
erp-shipping = { path = "erp-shipping" }
erp-payments = { path = "erp-payments" }
erp-risk = { path = "erp-risk" }
erp-security = { path = "erp-security" }
erp-enterprise = { path = "erp-enterprise" }
erp-features = { path = "erp-features" }
erp-keys = { path = "erp-keys" }
erp-backup = { path = "erp-backup" }
erp-monitoring = { path = "erp-monitoring" }
erp-cpq = { path = "erp-cpq" }
erp-clm = { path = "erp-clm" }
erp-commission = { path = "erp-commission" }
erp-aps = { path = "erp-aps" }
erp-spend-analytics = { path = "erp-spend-analytics" }
erp-compensation = { path = "erp-compensation" }
erp-tms = { path = "erp-tms" }
erp-plm = { path = "erp-plm" }
erp-mdm = { path = "erp-mdm" }
erp-fsm = { path = "erp-fsm" }
erp-tpm = { path = "erp-tpm" }
erp-wms = { path = "erp-wms" }
erp-demand = { path = "erp-demand" }
erp-edi = { path = "erp-edi" }
erp-tenant = { path = "erp-tenant" }
erp-revrec = { path = "erp-revrec" }
erp-intercompany = { path = "erp-intercompany" }
erp-lms = { path = "erp-lms" }
erp-reportscheduling = { path = "erp-reportscheduling" }
erp-chat = { path = "erp-chat" }
erp-calendar = { path = "erp-calendar" }
erp-signing = { path = "erp-signing" }
erp-email = { path = "erp-email" }
erp-lease = { path = "erp-lease" }
erp-bank = { path = "erp-bank" }
erp-loyalty = { path = "erp-loyalty" }
erp-partner = { path = "erp-partner" }
erp-pcard = { path = "erp-pcard" }
erp-territory = { path = "erp-territory" }
erp-predictive = { path = "erp-predictive" }
erp-mrp = { path = "erp-mrp" }
erp-eam = { path = "erp-eam" }
reqwest = { version = "0.11", features = ["json"] }
hmac = "0.12"
hex = "0.4"
cron = "0.12"
base64 = "0.22"
regex = "1.10"
handlebars = "5.1"
async-graphql = "7"

erp-bi = { path = "erp-bi" }
erp-i18n = { path = "erp-i18n" }
erp-push = { path = "erp-push" }
erp-bpm = { path = "erp-bpm" }
erp-graphql = { path = "erp-graphql" }
erp-assistant = { path = "erp-assistant" }
erp-ocr = { path = "erp-ocr" }
erp-fraud = { path = "erp-fraud" }
erp-processmining = { path = "erp-processmining" }
erp-promotions = { path = "erp-promotions" }
erp-approval-workflow = { path = "erp-approval-workflow" }
