[package]
name = "erp-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "erp-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
validator.workspace = true
erp-core.workspace = true
erp-finance.workspace = true
erp-inventory.workspace = true
erp-sales.workspace = true
erp-purchasing.workspace = true
erp-manufacturing.workspace = true
erp-hr.workspace = true
erp-auth.workspace = true
erp-service.workspace = true
erp-assets.workspace = true
erp-projects.workspace = true
erp-returns.workspace = true
erp-pos.workspace = true
erp-ecommerce.workspace = true
erp-tax.workspace = true
erp-reports.workspace = true
erp-barcode.workspace = true
erp-ai.workspace = true
erp-portals.workspace = true
erp-iot.workspace = true
erp-automation.workspace = true
erp-notifications.workspace = true
erp-webhooks.workspace = true
erp-jobs.workspace = true
erp-integration.workspace = true
erp-templates.workspace = true
erp-documents.workspace = true
erp-pricing.workspace = true
erp-sourcing.workspace = true
erp-config.workspace = true
erp-rules.workspace = true
erp-company.workspace = true
erp-subscription.workspace = true
erp-shipping.workspace = true
erp-payments.workspace = true
erp-risk.workspace = true
erp-security.workspace = true
erp-enterprise.workspace = true
once_cell.workspace = true
futures = "0.3"
http-body-util = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
