[package]
name = "erp-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "erp-server"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
validator.workspace = true
erp-core.workspace = true
erp-finance.workspace = true
erp-inventory.workspace = true
erp-sales.workspace = true
erp-purchasing.workspace = true
erp-manufacturing.workspace = true
erp-hr.workspace = true
erp-auth.workspace = true
erp-service.workspace = true
erp-assets.workspace = true
erp-projects.workspace = true
erp-returns.workspace = true
erp-pos.workspace = true
erp-ecommerce.workspace = true
erp-tax.workspace = true
erp-reports.workspace = true
erp-barcode.workspace = true
erp-ai.workspace = true
erp-portals.workspace = true
erp-iot.workspace = true
erp-automation.workspace = true
erp-notifications.workspace = true
erp-webhooks.workspace = true
erp-jobs.workspace = true
erp-integration.workspace = true
erp-templates.workspace = true
erp-documents.workspace = true
erp-pricing.workspace = true
erp-sourcing.workspace = true
erp-config.workspace = true
erp-rules.workspace = true
erp-company.workspace = true
erp-subscription.workspace = true
erp-shipping.workspace = true
erp-payments.workspace = true
erp-risk.workspace = true
erp-security.workspace = true
erp-enterprise.workspace = true
erp-features.workspace = true
erp-keys.workspace = true
erp-backup.workspace = true
erp-monitoring.workspace = true
erp-cpq.workspace = true
erp-clm.workspace = true
erp-commission.workspace = true
erp-aps.workspace = true
erp-spend-analytics.workspace = true
erp-compensation.workspace = true
erp-tms.workspace = true
erp-plm.workspace = true
erp-mdm.workspace = true
erp-fsm.workspace = true
erp-tpm.workspace = true
erp-wms.workspace = true
erp-demand.workspace = true
erp-edi.workspace = true
erp-tenant.workspace = true
erp-revrec.workspace = true
erp-intercompany.workspace = true
erp-lms.workspace = true
erp-reportscheduling.workspace = true
erp-chat.workspace = true
erp-calendar.workspace = true
erp-signing.workspace = true
erp-email.workspace = true
erp-lease.workspace = true
erp-bank.workspace = true
erp-loyalty.workspace = true
erp-partner.workspace = true
erp-pcard.workspace = true
erp-territory.workspace = true
erp-predictive.workspace = true
erp-mrp.workspace = true
erp-eam.workspace = true
erp-bi.workspace = true
erp-i18n.workspace = true
erp-push.workspace = true
erp-bpm.workspace = true
erp-graphql.workspace = true
erp-assistant.workspace = true
erp-ocr.workspace = true
erp-fraud.workspace = true
erp-processmining.workspace = true
async-graphql.workspace = true
once_cell.workspace = true
futures = "0.3"
http-body-util = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
