[package]
name = "erp-assets"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
validator.workspace = true
erp-core.workspace = true
