[package]
name = "erp-auth"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
once_cell.workspace = true
sha2.workspace = true
validator.workspace = true
regex.workspace = true
erp-core.workspace = true
