[package]
name = "erp-fraud"
version.workspace = true
edition.workspace = true

[dependencies]
erp-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
rand.workspace = true
