[package]
name = "erp-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
erp-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
thiserror.workspace = true
anyhow.workspace = true
cron = "0.12"
