[package]
name = "erp-keys"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
erp-core.workspace = true
sha2.workspace = true
rand.workspace = true
base64.workspace = true
