[package]
name = "erp-knowledge"
version = "0.1.0"
edition = "2021"

[dependencies]
erp-core = { path = "../erp-core" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
