[package]
name = "erp-manufacturing-backflush"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
erp-core = { path = "../erp-core" }
erp-manufacturing = { path = "../erp-manufacturing" }

[lints]
workspace = true
