[package]
name = "erp-notes"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
erp-core = { path = "../erp-core" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
