[package]
name = "erp-portals"
version.workspace = true
edition.workspace = true

[dependencies]
erp-core = { workspace = true }
erp-sales = { path = "../erp-sales" }
erp-purchasing = { path = "../erp-purchasing" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
futures = "0.3"