[package]
name = "erp-security"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
base64.workspace = true
sha2.workspace = true
sha1 = "0.10"
hmac.workspace = true
rand.workspace = true
reqwest.workspace = true
erp-core.workspace = true
