[package]
name = "erp-territory"
version.workspace = true
edition.workspace = true

[dependencies]
erp-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
async-trait.workspace = true
anyhow.workspace = true
